# google_messaging_toolkit

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/org/mevansam/google_messaging_toolkit/google_messaging_toolkit_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: google_messaging_toolkit.podspec
lib/: google_messaging_toolkit.dart  google_messaging_toolkit_bindings_generated.dart
linux/: CMakeLists.txt
macos/: google_messaging_toolkit.podspec
macos/Classes/: google_messaging_toolkit.c
src/: CMakeLists.txt  google_messaging_toolkit.c
windows/: CMakeLists.txt
